--- a/homepage.css
+++ b/homepage.css
@@ -1,6 +1,11 @@
-
+body {
+  margin: 0 auto;
+  background-color: #f3f3f3;
+  max-width: 4000px;
+  overflow-x: hidden;
+  }
   .links {
-    max-width: 100%;
+    max-width: 200%;
     padding-bottom:20px;
     margin-bottom: 5px;
     background-color:#F0F0F5; 
@@ -10,7 +15,7 @@
     
 }
   .links a {
-    max-width: 100%;
+    max-width: 200%;
     text-decoration: none;
     color: black;
     font-size: 13px;
@@ -93,7 +98,6 @@
     height: 30px;
     border: none;
     margin-right: 500px;
-    max-width: 200px;
     min-width: 30px;
 }
 footer {
